fix: Sellers not working fix: crash when using search box fix: search box not de-focusing